--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Wreck-it Ralph</title>
+	<title>Se le ve fresco al pana</title>
 	<link rel="icon" href="img/ralph-avatar.jpeg">
 	<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/hero.css">
