Translated to Spanish

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Se le ve fresco al pana</title>
+	<title>Ralph, el demoledor</title>
 	<link rel="icon" href="img/ralph-avatar.jpeg">
 	<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/hero.css">
@@ -11,38 +11,38 @@
 	<!-- header element -->
 	<header>
 		<img src="img/ralph-avatar.jpeg">
-		<h1>Se le ve fresco al pana</h1>
+		<h1>Ralph, el demoledor</h1>
 	</header>
 
 	<!-- main element -->
 	<main>
-		<h2>About Ralph</h2>
-		<p>Ralph is awesome! He's an 8-bit videogame bad guy who travels the length of the arcade to prove that he's a good guy.</p>
+		<h2>Acerca de Ralph</h2>
+		<p>¡Ralph es increíble! Él es un muchachón de un videojuego de 8-bits que viaja a lo largo de un juego para demostrar que es un buen tipo.</p>
 		<img src="img/ralph-big.jpg">
-		<p class="caption">Ralph and his friends</p>
+		<p class="caption">Ralph y sus amigos</p>
 
 		<!-- Characteristics -->
-		<h2>Ralph's Characteristics</h2>
+		<h2>Características de Ralph</h2>
 		<ol>
-			<li>He's got big hands</li>
-			<li>He's treated as bad-ass</li>
-			<li>He's trying to be a good guy</li>
+			<li>Tiene manos grandes</li>
+			<li>Lo tratan como un delincuente</li>
+			<li>Trata de ser un buen tipo</li>
 		</ol>
 
 		<!-- Friends -->
-		<h2>Ralph's Friends</h2>
-		<p>Ralph has some awesome friends. I think kis best friend is Glitch. She's awesome. Click on the links below to read more about them:</p>
+		<h2>Amigos de Ralph</h2>
+		<p>Ralph tiene algunos amigos increíbles. Creo que su mejor amiga es Glitch. Ella es increíble. Haz click en los links de abajo para leer más acerca de ellos:</p>
 		<ul>
 			<li><a target="_blank" href="https://en.wikipedia.org/wiki/Pac-Man">Pac-Man</a></li>
 			<li><a target="_blank" href="https://en.wikipedia.org/wiki/Mario">Mario</a></li>
 			<li><a target="_blank" href="https://en.wikipedia.org/wiki/Luigi">Luigi</a></li>
-			<li><a target="_blank" href="https://disney.fandom.com/wiki/Vanellope_von_Schweetz">Vanellope von Schweetz A.K.A Glitch</a></li>
+			<li><a target="_blank" href="https://disney.fandom.com/wiki/Vanellope_von_Schweetz">Vanellope von Schweetz alias Glitch</a></li>
 		</ul>
 	</main>
 
 	<!-- Footer element -->
 	<footer>
-		<p>This site was created during a <a target="_blank" href="https://taptapkaboom.com">Tap Tap Kaboom class</a>. &copy; Matias</p>
+		<p>Este sitio fue creado durante una clase de <a target="_blank" href="https://taptapkaboom.com">Tap Tap Kaboom</a>. &copy; Matias</p>
 	</footer>
 
 </body>
